@@ -2003,6 +2003,11 @@ extern status_t bridge_free_bg(my_bluegene_t *bg)
 
 }
 
+extern uint16_t bridge_block_get_action(char *bg_block_id)
+{
+	return BG_BLOCK_ACTION_NONE;
+}
+
 extern int bridge_set_log_params(char *api_file_name, unsigned int level)
 {
 	static FILE *fp = NULL;
